--- a/src/main/webapp/app/entities/book/book-update.component.html
+++ b/src/main/webapp/app/entities/book/book-update.component.html
@@ -6,7 +6,7 @@
             <div>
                 <jhi-alert-error></jhi-alert-error>
 
-                <div class="form-group" [hidden]="!editForm.get('id')!.value">
+                <div class="form-group" [hidden]="true">
                     <label for="id" jhiTranslate="global.field.id">ID</label>
                     <input type="text" class="form-control" id="id" name="id" formControlName="id" readonly />
                 </div>
@@ -15,9 +15,23 @@
                     <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.book.name" for="field_name">Name</label>
                     <input type="text" class="form-control" name="name" id="field_name"
                            formControlName="name"/>
+                    <div *ngIf="editForm.get('name')!.invalid && (editForm.get('name')!.dirty || editForm.get('name')!.touched)" >
+                        <small class="form-text text-danger"
+                                jhiTranslate="nidAuxHistoiresApp.book.required.name">
+                            Name field is required
+                        </small>
+                    </div>
                 </div>
 
                 <div class="form-group">
+                    <div (click)="visible = !visible" class="btn btn-info btn-sm">
+                        <span class="d-none d-md-inline" jhiTranslate="nidAuxHistoiresApp.book.visibility">Visibility :</span>
+                        <fa-icon icon="eye" *ngIf="visible"></fa-icon>
+                        <fa-icon icon="eye-slash" *ngIf="!visible"></fa-icon>
+                    </div>
+                </div>
+
+                <div class="form-group" *jhiHasAnyAuthority="'ROLE_ADMIN'">
                     <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.book.author" for="field_author">Author</label>
                     <input type="text" class="form-control" name="author" id="field_author"
                            formControlName="authorId"/>
