--- a/src/main/webapp/app/entities/cover/cover-update.component.html
+++ b/src/main/webapp/app/entities/cover/cover-update.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-            <h2 id="jhi-cover-heading" jhiTranslate="nidAuxHistoiresApp.cover.home.createOrEditLabel">Create or edit a Image</h2>
+            <h2 id="jhi-cover-heading" jhiTranslate="nidAuxHistoiresApp.cover.home.createOrEditLabel">Create or edit a Cover</h2>
 
             <div>
                 <jhi-alert-error></jhi-alert-error>
