--- a/src/main/webapp/app/entities/part/part-update.component.html
+++ b/src/main/webapp/app/entities/part/part-update.component.html
@@ -15,6 +15,12 @@
                     <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.part.name" for="field_name">Name</label>
                     <input type="text" class="form-control" name="name" id="field_name"
                            formControlName="name"/>
+                    <div *ngIf="editForm.get('name')!.invalid && (editForm.get('name')!.dirty || editForm.get('name')!.touched)" >
+                        <small class="form-text text-danger"
+                                jhiTranslate="nidAuxHistoiresApp.part.required.name">
+                            Name field is required
+                        </small>
+                    </div>
                 </div>
 
                 <div class="form-group">
@@ -25,8 +31,15 @@
 
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.part.number" for="field_number">Number</label>
+                    <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.part.numberAuto" for="field_number">Number</label>
                     <input type="number" class="form-control" name="number" id="field_number"
                            formControlName="number"/>
+                    <div *ngIf="editForm.get('number')!.invalid && (editForm.get('number')!.dirty || editForm.get('number')!.touched)" >
+                        <small class="form-text text-danger"
+                                jhiTranslate="nidAuxHistoiresApp.part.required.number">
+                            Number field is required
+                        </small>
+                    </div>
                 </div>
 
                 <div class="form-group">
@@ -35,6 +48,12 @@
                         <option [ngValue]="null"></option>
                         <option [ngValue]="bookOption.id" *ngFor="let bookOption of books; trackBy: trackById">{{ bookOption.id + " " + bookOption.name }}</option>
                     </select>
+                    <div *ngIf="editForm.get('bookId')!.invalid && (editForm.get('bookId')!.dirty || editForm.get('bookId')!.touched)" >
+                        <small class="form-text text-danger"
+                                jhiTranslate="nidAuxHistoiresApp.part.required.book">
+                            Book field is required
+                        </small>
+                    </div>
                 </div>
             </div>
 
