--- a/src/main/webapp/app/entities/part/part.component.html
+++ b/src/main/webapp/app/entities/part/part.component.html
@@ -26,7 +26,7 @@
                     <th scope="col"  jhiSortBy="name"><span jhiTranslate="nidAuxHistoiresApp.part.name">Name</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"  jhiSortBy="description"><span jhiTranslate="nidAuxHistoiresApp.part.description">Description</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"  jhiSortBy="number"><span jhiTranslate="nidAuxHistoiresApp.part.number">Number</span> <fa-icon icon="sort"></fa-icon></th>
-                    <th scope="col"  jhiSortBy="bookId"><span jhiTranslate="nidAuxHistoiresApp.part.book">Book</span> <fa-icon icon="sort"></fa-icon></th>
+                    <th scope="col"  jhiSortBy="book.id"><span jhiTranslate="nidAuxHistoiresApp.part.book">Book</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"></th>
                 </tr>
             </thead>
