--- a/src/main/webapp/app/entities/scene/scene-detail.component.html
+++ b/src/main/webapp/app/entities/scene/scene-detail.component.html
@@ -22,7 +22,7 @@
                 </dd>
                 <dt><span jhiTranslate="nidAuxHistoiresApp.scene.timestampStart">Timestamp Start</span></dt>
                 <dd>
-                    <span>{{ scene.timestampStart | date:'medium' }}</span>
+                    <span>{{ scene.timestampStart | date:'medium':'UTC' }}</span>
                 </dd>
                 <dt><span jhiTranslate="nidAuxHistoiresApp.scene.chapter">Chapter</span></dt>
                 <dd>
