--- a/src/main/webapp/app/entities/scene/scene-update.component.html
+++ b/src/main/webapp/app/entities/scene/scene-update.component.html
@@ -43,15 +43,10 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.scene.timestampStart" for="field_timestampStart">Timestamp Start</label>
+                    <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.scene.timestampStart" for="field_dateStart">Timestamp Start</label>
                     <div class="input-group">
-                        <input id="field_timestampStart" type="text" class="form-control" name="timestampStart"  formControlName="timestampStart"/>
-                    </div>
-                    <div *ngIf="editForm.get('timestampStart')!.invalid && (editForm.get('timestampStart')!.dirty || editForm.get('timestampStart')!.touched)" >
-                        <small class="form-text text-danger"
-                               jhiTranslate="nidAuxHistoiresApp.scene.format.timestampStart" [translateValues]="{ format: datetimeFormat }">
-                               Date / Time fied must be in the format {{ datetimeFormat }}
-                        </small>
+                        <input id="field_dateStart" type="date" class="form-control" name="dateStart" formControlName="dateStart"/>
+                        <input id="field_timeStart" type="time" class="form-control ml-2" name="timeStart" formControlName="timeStart" step="1"/>
                     </div>
                 </div>
 
