--- a/src/main/webapp/app/entities/bonus/bonus-update.component.html
+++ b/src/main/webapp/app/entities/bonus/bonus-update.component.html
@@ -12,15 +12,48 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.bonus.name" for="field_name">Name</label>
+                    <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.cover.name" for="field_name">Name</label>
                     <input type="text" class="form-control" name="name" id="field_name"
                            formControlName="name"/>
+                    <div *ngIf="editForm.get('name')!.invalid && (editForm.get('name')!.dirty || editForm.get('name')!.touched)" >
+                        <small class="form-text text-danger"
+                                jhiTranslate="nidAuxHistoiresApp.bonus.required.name">
+                            Name field is required
+                        </small>
+                    </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.bonus.extension" for="field_extension">Extension</label>
-                    <input type="text" class="form-control" name="extension" id="field_extension"
-                           formControlName="extension"/>
+                    <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.bonus.file" for="field_file">File</label>
+                    <div *ngIf="editForm.get('file')!.value" class="form-text text-danger clearfix">
+                        <span class="pull-left">{{ editForm.get('fileContentType')!.value }}, {{ byteSize(editForm.get('file')!.value) }}</span>
+                        <button type="button" (click)="clearInputData('file', 'fileContentType', 'file')" class="btn btn-secondary btn-xs pull-right">
+                            <fa-icon icon="times"></fa-icon>
+                        </button>
+                    </div>
+                    <input type="file" id="file" (change)="setFileData($event, 'file', false)" jhiTranslate="entity.action.addblob"/>
+                    <input type="hidden" class="form-control" name="file" id="field_file" formControlName="file"/>
+                    <input type="hidden" class="form-control" name="fileContentType" id="field_fileContentType" formControlName="fileContentType" />
+                </div>
+                
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.bonus.description" for="field_description">Description</label>
+                    <textarea type="text" class="form-control" name="description" id="field_description"
+                           formControlName="description"></textarea>
+                </div>
+
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.bonus.book" for="field_book">Book</label>
+                    <select class="form-control" id="field_book" name="book" formControlName="bookId">
+                        <option [ngValue]="null"></option>
+                        <option [ngValue]="bookOption.id" *ngFor="let bookOption of books">{{ bookOption.id + " " + bookOption.name }}</option>
+                    </select>
+                    <div *ngIf="editForm.get('bookId')!.invalid && (editForm.get('bookId')!.dirty || editForm.get('bookId')!.touched)" >
+                        <small class="form-text text-danger"
+                                jhiTranslate="nidAuxHistoiresApp.bonus.required.book">
+                            Book field is required
+                        </small>
+                    </div>
                 </div>
             </div>
 
