--- a/src/main/webapp/app/entities/cover/cover-update.component.html
+++ b/src/main/webapp/app/entities/cover/cover-update.component.html
@@ -15,6 +15,12 @@
                     <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.cover.name" for="field_name">Name</label>
                     <input type="text" class="form-control" name="name" id="field_name"
                            formControlName="name"/>
+                    <div *ngIf="editForm.get('name')!.invalid && (editForm.get('name')!.dirty || editForm.get('name')!.touched)" >
+                        <small class="form-text text-danger"
+                                jhiTranslate="nidAuxHistoiresApp.cover.required.name">
+                            Name field is required
+                        </small>
+                    </div>
                 </div>
 
                 <div class="form-group">
@@ -29,10 +35,8 @@
                         </div>
                         <input type="file" id="file_picture" (change)="setFileData($event, 'picture', true)" accept="image/*" jhiTranslate="entity.action.addcover"/>
                     </div>
-                    <input type="hidden" class="form-control" name="picture" id="field_picture"
-                           formControlName="picture"/>
-                           <input type="hidden" class="form-control" name="pictureContentType" id="field_pictureContentType"
-                                  formControlName="pictureContentType" />
+                    <input type="hidden" class="form-control" name="picture" id="field_picture" formControlName="picture"/>
+                    <input type="hidden" class="form-control" name="pictureContentType" id="field_pictureContentType" formControlName="pictureContentType" />
                 </div>
             </div>
 
