Update book MAJ

--- a/src/main/webapp/app/entities/bonus/bonus-update.component.html
+++ b/src/main/webapp/app/entities/bonus/bonus-update.component.html
@@ -16,11 +16,15 @@
                     <input type="text" class="form-control" name="name" id="field_name"
                            formControlName="name"/>
                     <div *ngIf="editForm.get('name')!.invalid && (editForm.get('name')!.dirty || editForm.get('name')!.touched)" >
-                        <small class="form-text text-danger"
-                                jhiTranslate="nidAuxHistoiresApp.bonus.required.name">
+                        <small class="form-text text-danger" jhiTranslate="nidAuxHistoiresApp.bonus.required.name">
                             Name field is required
                         </small>
                     </div>
+                </div>
+
+                <div class="form-group" *jhiHasAnyAuthority="'ROLE_ADMIN'">
+                    <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.bonus.owner" for="field_owner">Owner</label>
+                    <input type="text" class="form-control" name="owner" id="field_owner" formControlName="ownerId"/>
                 </div>
 
                 <div class="form-group">
