--- a/src/main/webapp/app/entities/cover/cover-update.component.html
+++ b/src/main/webapp/app/entities/cover/cover-update.component.html
@@ -23,6 +23,11 @@
                     </div>
                 </div>
 
+                <div class="form-group" *jhiHasAnyAuthority="'ROLE_ADMIN'">
+                    <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.cover.owner" for="field_owner">Owner</label>
+                    <input type="text" class="form-control" name="owner" id="field_owner" formControlName="ownerId"/>
+                </div>
+
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.cover.picture" for="field_picture">Picture</label>
                     <div>
