--- a/src/main/webapp/app/entities/book/book-detail.component.html
+++ b/src/main/webapp/app/entities/book/book-detail.component.html
@@ -15,7 +15,8 @@
                 <dt><span jhiTranslate="nidAuxHistoiresApp.book.author">Author</span></dt>
                 <dd>
                     <div *ngIf="book.authorLogin">
-                        <a [routerLink]="['/admin/user-management', book.authorLogin, 'view']">{{ book.authorLogin }}</a>
+                        <a *jhiHasAnyAuthority="['ROLE_ADMIN']" [routerLink]="['/admin/user-management', book.authorLogin, 'view']">{{ book.authorLogin }}</a>
+                        <a *jhiHasNoAuthority="['ROLE_ADMIN']" [routerLink]="['/authors/', book.authorLogin, 'visit']">{{ book.authorLogin }}</a>
                     </div>
                 </dd>
                 <dt><span jhiTranslate="nidAuxHistoiresApp.book.cover">Cover</span></dt>
@@ -35,6 +36,11 @@
                 <dd>
                     <div *ngFor="let part of book.parts">
                         <a [routerLink]="['/entities/part', part.id, 'view']">{{ part.id }} - {{ part.name }}</a>
+                    </div>
+                    <div>
+                        <a [routerLink]="['/entities/part/new']" [queryParams]="{bookId: book.id}">
+                            <fa-icon icon="plus"></fa-icon>
+                        </a>
                     </div>
                 </dd>
             </dl>
