--- a/src/main/webapp/app/entities/part/part-detail.component.html
+++ b/src/main/webapp/app/entities/part/part-detail.component.html
@@ -31,6 +31,11 @@
                     <div *ngFor="let chapter of part.chapters">
                         <a [routerLink]="['/entities/chapter', chapter.id, 'view']">{{ chapter.id }} - {{ chapter.name }}</a>
                     </div>
+                    <div>
+                        <a [routerLink]="['/entities/chapter/new']" [queryParams]="{partId: part.id}">
+                            <fa-icon icon="plus"></fa-icon>
+                        </a>
+                    </div>
                 </dd>
             </dl>
 
