Bug fix on bonuses and covers

--- a/src/main/webapp/app/entities/bonus/bonus-detail.component.html
+++ b/src/main/webapp/app/entities/bonus/bonus-detail.component.html
@@ -12,9 +12,9 @@
                 <dd>
                     <span>{{ bonus.name }}</span>
                 </dd>
-                <dt><span jhiTranslate="nidAuxHistoiresApp.bonus.extension">Extension</span></dt>
+                <dt><span jhiTranslate="nidAuxHistoiresApp.bonus.dataContentType">Content Data Type</span></dt>
                 <dd>
-                    <span>{{ bonus.extension }}</span>
+                    <span>{{ bonus.dataContentType }}</span>
                 </dd>
                 <dt><span jhiTranslate="nidAuxHistoiresApp.bonus.book">Book</span></dt>
                 <dd>
